cabal-version:      2.4
name:               scheme-to-js
version:            0.1.0.0

synopsis: A Scheme-to-JavaScript Transpiler

-- license:
author:             Lucas Scharenbroch
maintainer:         lucasscharenbroch@gmail.com

library s2j-lib
    exposed-modules:  Lex
    build-depends:    base, parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable s2j
    main-is:          Main.hs
    other-modules:    Lex
    build-depends:    base, parsec, s2j-lib
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:    TestLex
    build-depends:    base, tasty, tasty-hunit, s2j-lib
    default-language: Haskell2010
