cabal-version:      2.4
name:               scheme-to-js
version:            0.1.0.0

synopsis: A Scheme-to-JavaScript Transpiler

-- license:
author:             Lucas Scharenbroch
maintainer:         lucasscharenbroch@gmail.com

executable s2j
    main-is:          Main.hs
    other-modules:    Lex, Preprocess, Parse, Generate, Optimize
    build-depends: base ^>=4.15.1.0,
                   parsec ^>= 3.1.14.0,
                   directory ^>= 1.3.6.2
    hs-source-dirs:   src
    default-language: Haskell2010
